[gd_scene load_steps=11 format=3 uid="uid://130pp373p1ad"]

[ext_resource type="Script" uid="uid://clskv71n4s7yx" path="res://scripts/finish_menu.gd" id="1_3x54e"]
[ext_resource type="Theme" uid="uid://d0iabbh4bcopt" path="res://horror_theme.tres" id="2_6v0qo"]
[ext_resource type="Shader" uid="uid://ddv2h4qbt40c5" path="res://shaders/pause_menu.gdshader" id="3_sqr87"]
[ext_resource type="FontFile" uid="uid://2skucwyidu7h" path="res://assets/fonts/shlop rg.otf" id="4_asm6m"]
[ext_resource type="AudioStream" uid="uid://d3ckforh82ciq" path="res://audio/sounds/SFX/menu_selection.mp3" id="5_3tvbw"]
[ext_resource type="AudioStream" uid="uid://b8kld2ep15qtu" path="res://audio/musics/finish_game.mp3" id="6_3x54e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntkjb"]
shader = ExtResource("3_sqr87")
shader_parameter/lod = 2.0

[sub_resource type="Animation" id="Animation_atv5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuContent:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ntkjb"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuContent:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpmee"]
_data = {
&"RESET": SubResource("Animation_atv5q"),
&"open": SubResource("Animation_ntkjb")
}

[node name="FinishMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3x54e")

[node name="MenuContent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6v0qo")

[node name="ColorRect" type="ColorRect" parent="MenuContent"]
material = SubResource("ShaderMaterial_ntkjb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MenuContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContent/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MenuContent/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.29411766, 0, 1)
theme_override_fonts/font = ExtResource("4_asm6m")
theme_override_font_sizes/font_size = 80
text = "YOU'VE ESCAPED!"

[node name="ButtonReset" type="Button" parent="MenuContent/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY AGAIN"

[node name="ButtonQuit" type="Button" parent="MenuContent/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cpmee")
}

[node name="SfxHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3tvbw")

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3x54e")
volume_db = -20.0

[connection signal="button_down" from="MenuContent/CenterContainer/VBoxContainer/ButtonReset" to="." method="_on_button_reset_button_down"]
[connection signal="button_down" from="MenuContent/CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_button_down"]
